--- a/public/press-kit.html
+++ b/public/press-kit.html
@@ -188,6 +188,7 @@
         </div>
     </header>
 
+    <main>
     <section>
         <h2>Quick Bio (75 words)</h2>
         <div class="bio-short">
@@ -295,6 +296,7 @@
             <dd>Pacific Time Zone (US)</dd>
         </dl>
     </section>
+    </main>
 
     <footer>
         <p><strong>Cache McClure Press Kit</strong> | Last Updated: November 2025</p>
